[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threatlens-ai"
version = "0.1.0"
description = "ThreatLens AI is a threat intelligence orchestration platform with FastAPI backend, Streamlit frontend, and LangGraph agent orchestration."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Framework :: Streamlit",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://example.com/threatlens-ai"

[tool.setuptools.packages.find]
where = ["."]
include = ["threatlens_ai"]
